ExoPlayer 2.15.1 new version created

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:focusable="true"
         app:controller_layout_id="@layout/custom_controller_view"
-       />
+        app:resize_mode="fill" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
